--- a/quarkus-angular-keycloak/angular/oauth-demo-ui/src/styles.scss
+++ b/quarkus-angular-keycloak/angular/oauth-demo-ui/src/styles.scss
@@ -1,12 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-body, html {
-  margin: 0;
-  padding: 0;
-}
-
-
-
 button {
   padding: 10px 10px 10px 10px;
-  margin:  10px 10px 10px 10px;
+  margin: 10px 10px 10px 10px;
+}
+
+html, body {
+  margin: 5px;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
