--- a/quarkus-angular-keycloak/angular/oauth-demo-ui/src/app/app.component.html
+++ b/quarkus-angular-keycloak/angular/oauth-demo-ui/src/app/app.component.html
@@ -1,49 +1,58 @@
 <div class="bar">
   <div class="ample" [ngStyle]="{'background-color':authenticated?'green': 'red'}"></div>
 
-  <div *ngIf="authenticated" style="width: 80%">
-    <div class="token">
-      <label for="token">Access Token</label>
-      <div id="token">
-        {{ accessToken }}
-      </div>
-    </div>
-    <div class="token">
-      <label for="decoded">Decoded Access Token</label>
-      <div>
+  <div *ngIf="authenticated" class="token-container">
+    <div>
+    <mat-accordion>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>Access Token</mat-expansion-panel-header>
+        <div class="token">
+          {{ accessToken }}
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
+  <div>
+    <mat-accordion>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>Decoded Access Token</mat-expansion-panel-header>
+        <div class="token">
         <textarea id="decoded" disabled>
             {{ decodedToken }}
         </textarea>
-      </div>
-    </div>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
   </div>
+</div>
 
-  <button (click)="login()" *ngIf="!authenticated">login</button>
-  <button (click)="logout()" *ngIf="authenticated">logout</button>
+<button (click)="login()" *ngIf="!authenticated">login</button>
+<button (click)="logout()" *ngIf="authenticated">logout</button>
 
 </div>
-<div>
+<div class="main">
   <h2>
-
     Test services:
   </h2>
   <div>
-    <button (click)="callService('/api/books')">Call Public</button>
-    <button (click)="callService('/api/books/count')">Call Protected</button>
-    <div *ngIf="responseTxt.length > 0">
+    <button (click)="callService('/api/public/')">Public</button>
+    <button (click)="callService('/api/protected')">Protected</button>
+    <button (click)="callService('/api/protected/admin')">Protected (Role Based)</button>
+    <div class="message" *ngIf="responseTxt.length > 0">
       Response:
       <div>
         {{ responseTxt }}
       </div>
     </div>
+    <div class="error" *ngIf="errorTxt">
+      Error:
+      <div>
+        {{ errorTxt }}
+      </div>
+    </div>
   </div>
+
 </div>
 
-<div class="error" *ngIf="errorTxt">
-  Error:
-  <div>
-    {{ errorTxt }}
-  </div>
-</div>
 
 <router-outlet/>
